--- a/dropdown_navigation_bar.html
+++ b/dropdown_navigation_bar.html
@@ -79,9 +79,9 @@ body {
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="https://www.youtube.com/watch?v=h_E4Yy_n8A8">Link 1</a>
+      <a href="https://www.youtube.com/shorts/n4Bx1BzvYaA">Link 2</a>
+      <a href="https://www.youtube.com/watch?v=ieSpe9gDAO0">Link 3</a>
     </div>
   </div> 
 </div>
