--- a/dropdown_navigation_bar.html
+++ b/dropdown_navigation_bar.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="dropdown.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -10,7 +11,7 @@
     <a href="#home">Home</a>
     <a href="#news">News</a>
     <div class="dropdown">
-      <button class="dropbtn">Dropdown &#x25BC;
+      <button class="dropbtn">Dropdown 
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
